--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -13,9 +12,8 @@
     "@types/styled-components": "^5.1.25",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
+    "recoil": "^0.7.3-alpha.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
