--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.5",
     "recoil": "^0.7.3-alpha.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.4",
