--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^18.0.4",
     "@types/styled-components": "^5.1.25",
     "classnames": "^2.3.1",
+    "hangul-js": "^0.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
